--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,56 @@ nav {
 .menu a:hover {
   transform: scale(1.1);
 }
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin-top: 50px;
+}
+
+.hero-text p {
+  text-align: center;
+  font-size: 20px;
+}
+
+.hero-text h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+
+.heading h1 {
+  font-size: 50px;
+  text-align: center;
+}
+
+.heading h1 span {
+  color: var(--highlight-text);
+}
+
+@media (max-width: 768px) {
+  .heading h1 {
+    font-size: 30px;
+    text-align: center;
+    margin-left: 0px;
+  }
+
+  .hero-text p {
+    font-size: 15px;
+  }
+}
+
+.pfp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.pfp img {
+  max-width: 150px;
+  max-height: 150px;
+  border-radius: 50%;
+}
