--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 :root {
-  --foreground-color: #000;
-  --background-color: #fff;
-  --glow-color: #14532d;
-  --highlight-text: #059669;
+  --foreground-color: #1f2937;
+  --background-color: #e5e7eb;
+  --glow-color: #6ee7b7;
+  --highlight-text: #10b981;
+  --button: #6ee7b7;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-color: #fff;
     --background-color: #000;
+    --glow-color: #14532d;
+    --highlight-text: #059669;
+    --button: #10b981;
   }
 }
 
@@ -50,7 +55,8 @@ body {
   position: sticky;
   top: 0;
   width: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: var(--background-color);
+  opacity: 0.8;
   box-shadow: 0 8px 32px 0 var(--glow-color);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
@@ -87,6 +93,20 @@ nav {
 
 .menu a:hover {
   transform: scale(1.1);
+}
+
+.menu-btn {
+  background: var(--button);
+  border-radius: 16px;
+  transition: 0.3s all ease-in-out;
+}
+
+.menu-btn:hover {
+  background: #9ca3af;
+}
+
+.menu-btn a:hover {
+  transform: none;
 }
 
 .hero-text {
