--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -29,4 +29,51 @@
   .hero-typewriter {
     font-size: 25px;
   }
+
+  .hero-text p {
+    font-size: 15px;
+  }
+}
+
+.button-effect {
+  padding: 0 30px;
+}
+
+.hero-text {
+  margin-top: 50px;
+}
+
+.hero-text p {
+  text-align: center;
+  font-size: 20px;
+}
+
+.hero-text h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  text-decoration: underline;
+  margin-bottom: 10px;
+}
+
+.hero-socials {
+  gap: 16px;
+  margin: 10px;
+}
+
+.hero-socials img {
+  max-width: 30px;
+  transition: 0.2s all ease-in-out;
+}
+
+.hero-socials img:hover {
+  transform: scale(1.2);
+}
+
+.hero-socials a {
+  padding: 12px;
+  background: rgba(5, 0, 0, 0.3);
+  box-shadow: 0 8px 32px 0 var(--glow-color);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 16px;
 }
