--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,10 @@ body {
 }
 
 @media (max-width: 576px) {}
+
+.unclickable {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  pointer-events: none;
+}
