--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -1,5 +1,6 @@
 .heading h1 {
   font-size: 50px;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -11,6 +12,6 @@
   .heading h1 {
     font-size: 30px;
     text-align: center;
-    margin-left: 0px;
+    margin-left: 0;
   }
 }
