--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -2,19 +2,26 @@
   position: relative;
 }
 
-.hero-bg {
+.hero-bgc {
   position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
   z-index: -10;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8)), url("https://bucket.kptankhoa.dev/bg.jpg");
+}
 
+.hero-bg {
   filter: blur(8px);
   -webkit-filter: blur(8px);
-  background-position: center;
-  background-repeat: no-repeat;
+
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8)), url("https://bucket.kptankhoa.dev/bg.jpg") no-repeat center;
   background-size: cover;
+}
+
+@media (prefers-color-scheme: light) {
+  .hero-bg {
+    background: none
+  }
 }
 
 .pfp {
@@ -80,13 +87,13 @@
   margin: 10px;
 }
 
-.hero-socials img {
-  max-width: 30px;
-  transition: 0.2s all ease-in-out;
+.hero-socials svg {
+  transition: 0.3s all ease-in-out;
 }
 
-.hero-socials img:hover {
-  transform: scale(1.2);
+.hero-socials svg:hover {
+  transform: scale(1.3);
+  color: var(--highlight-text)
 }
 
 .hero-socials a {
