--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,19 +10,26 @@ nav {
   box-shadow: 0 8px 32px 0 var(--glow-color);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
-  border: 1px 0 solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   z-index: 1;
 }
 
 .logo {
   font-size: 22px;
   color: var(--foreground-color);
+  user-select: none;
 }
 
 .logo span span {
   color: var(--highlight-text);
 }
 
+.logo img {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  pointer-events: none;
+}
 .menu-icon {
   display: none;
 }
