--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,5 +1,12 @@
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .hero {
   position: relative;
+  height: calc(100vh - 110px);
 }
 
 .hero-bgc {
@@ -84,7 +91,7 @@
 }
 
 .hero-text {
-  margin-top: 30px;
+  margin-top: 40px;
   padding-bottom: 20px;
 }
 
